fix popup image display on mobile

--- a/styles/sass/partials/_popup.scss
+++ b/styles/sass/partials/_popup.scss
@@ -23,9 +23,7 @@
     border-radius: 5px;
 
     img {
-        height:600px;
-        // height: 100%;
-        // object-fit: cover;
+        
         border-radius: 5px 0 0 5px;
     }
 
