--- a/styles/styles.css
+++ b/styles/styles.css
@@ -443,7 +443,6 @@ footer {
   border-radius: 5px;
 }
 .popup img {
-  height: 600px;
   border-radius: 5px 0 0 5px;
 }
 .popup .button-container {
